--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <menu>
         <ul class="menu wrap_box flex">
             <li class="flex">
-                <a class="active" href="index.html">HOME</a>
+                <a href="index.html">HOME</a>
                 <a href="publications.html">PUBLICATIONS</a>
                 <a href="researchList.html">RESEARCH</a>
             </li>
@@ -145,7 +145,8 @@
                         <a href="./newsDetail.html" class="flex">
                             <img src="images/news/news.png" alt="">
                             <div class="cont">
-                                <h6>Lecture on Elemental Analyzer Tec...</h6>
+                                <h6>Lectures on Raman Spectroscopy Technology on Molecular Science Platform
+                                </h6>
                                 <p>Organic Element Analyzer is mainly used for accurate determination of carbon, hydrogen,
                                     nitrogen, sulfur, oxygen and other elements in organic compounds, which can meet the
                                     testing
@@ -161,7 +162,8 @@
                         <a href="./newsDetail.html" class="flex">
                             <img src="images/news/news.png" alt="">
                             <div class="cont">
-                                <h6>Lecture on Elemental Analyzer Tec...</h6>
+                                <h6>Lectures on Raman Spectroscopy Technology on Molecular Science Platform
+</h6>
                                 <p>Organic Element Analyzer is mainly used for accurate determination of carbon, hydrogen,
                                     nitrogen, sulfur, oxygen and other elements in organic compounds, which can meet the
                                     testing
@@ -177,7 +179,8 @@
                         <a href="./newsDetail.html" class="flex">
                             <img src="images/news/news.png" alt="">
                             <div class="cont">
-                                <h6>Lecture on Elemental Analyzer Tec...</h6>
+                                <h6>Lectures on Raman Spectroscopy Technology on Molecular Science Platform
+</h6>
                                 <p>Organic Element Analyzer is mainly used for accurate determination of carbon, hydrogen,
                                     nitrogen, sulfur, oxygen and other elements in organic compounds, which can meet the
                                     testing
@@ -193,7 +196,8 @@
                         <a href="./newsDetail.html" class="flex">
                             <img src="images/news/news.png" alt="">
                             <div class="cont">
-                                <h6>Lecture on Elemental Analyzer Tec...</h6>
+                                <h6>Lectures on Raman Spectroscopy Technology on Molecular Science Platform
+</h6>
                                 <p>Organic Element Analyzer is mainly used for accurate determination of carbon, hydrogen,
                                     nitrogen, sulfur, oxygen and other elements in organic compounds, which can meet the
                                     testing
