--- a/newsList.html
+++ b/newsList.html
@@ -32,7 +32,7 @@
     <menu>
         <ul class="menu wrap_box flex">
             <li class="flex">
-                <a class="active" href="index.html">HOME</a>
+                <a href="index.html">HOME</a>
                 <a href="publications.html">PUBLICATIONS</a>
                 <a href="researchList.html">RESEARCH</a>
             </li>
@@ -62,7 +62,8 @@
                     <a href="./newsDetail.html" class="flex">
                         <img src="images/news/news.png" alt="">
                         <div class="cont">
-                            <h6>Lecture on Elemental Analyzer Tec...</h6>
+                            <h6>Lectures on Raman Spectroscopy Technology on Molecular Science Platform
+</h6>
                             <p>Organic Element Analyzer is mainly used for accurate determination of carbon, hydrogen,
                                 nitrogen, sulfur, oxygen and other elements in organic compounds, which can meet the
                                 testing
@@ -78,7 +79,8 @@
                     <a href="./newsDetail.html" class="flex">
                         <img src="images/news/news.png" alt="">
                         <div class="cont">
-                            <h6>Lecture on Elemental Analyzer Tec...</h6>
+                            <h6>Lectures on Raman Spectroscopy Technology on Molecular Science Platform
+</h6>
                             <p>Organic Element Analyzer is mainly used for accurate determination of carbon, hydrogen,
                                 nitrogen, sulfur, oxygen and other elements in organic compounds, which can meet the
                                 testing
@@ -94,7 +96,8 @@
                     <a href="./newsDetail.html" class="flex">
                         <img src="images/news/news.png" alt="">
                         <div class="cont">
-                            <h6>Lecture on Elemental Analyzer Tec...</h6>
+                            <h6>Lectures on Raman Spectroscopy Technology on Molecular Science Platform
+</h6>
                             <p>Organic Element Analyzer is mainly used for accurate determination of carbon, hydrogen,
                                 nitrogen, sulfur, oxygen and other elements in organic compounds, which can meet the
                                 testing
@@ -110,7 +113,8 @@
                     <a href="./newsDetail.html" class="flex">
                         <img src="images/news/news.png" alt="">
                         <div class="cont">
-                            <h6>Lecture on Elemental Analyzer Tec...</h6>
+                            <h6>Lectures on Raman Spectroscopy Technology on Molecular Science Platform
+</h6>
                             <p>Organic Element Analyzer is mainly used for accurate determination of carbon, hydrogen,
                                 nitrogen, sulfur, oxygen and other elements in organic compounds, which can meet the
                                 testing
@@ -126,7 +130,8 @@
                     <a href="./newsDetail.html" class="flex">
                         <img src="images/news/news.png" alt="">
                         <div class="cont">
-                            <h6>Lecture on Elemental Analyzer Tec...</h6>
+                            <h6>Lectures on Raman Spectroscopy Technology on Molecular Science Platform
+</h6>
                             <p>Organic Element Analyzer is mainly used for accurate determination of carbon, hydrogen,
                                 nitrogen, sulfur, oxygen and other elements in organic compounds, which can meet the
                                 testing
