--- a/energyConverter.html
+++ b/energyConverter.html
@@ -133,7 +133,7 @@
     <menu>
         <ul class="menu wrap_box flex">
             <li class="flex">
-                <a class="active" href="index.html">HOME</a>
+                <a href="index.html">HOME</a>
                 <a href="publications.html">PUBLICATIONS</a>
                 <a href="researchList.html">RESEARCH</a>
             </li>
