--- a/energyConverter.html
+++ b/energyConverter.html
@@ -145,7 +145,7 @@
                     <span>RESOURCES</span>
                     <div class="list">
                         <a href="teaching.html">Teaching</a>
-                        <a href="energyConverter.html">Energy Converter</a>
+                        <a class="active" href="energyConverter.html">Energy Converter</a>
                     </div>
                 </div>
             </li>
