--- a/publications.html
+++ b/publications.html
@@ -33,7 +33,7 @@
         <ul class="menu wrap_box flex">
             <li class="flex">
                 <a href="index.html">HOME</a>
-                <a href="publications.html">PUBLICATIONS</a>
+                <a class="active" href="publications.html">PUBLICATIONS</a>
                 <a href="researchList.html">RESEARCH</a>
             </li>
             <li><img src="./img/label.png" alt=""></li>
