--- a/researchDetail.html
+++ b/researchDetail.html
@@ -34,7 +34,7 @@
             <li class="flex">
                 <a href="index.html">HOME</a>
                 <a href="publications.html">PUBLICATIONS</a>
-                <a href="researchList.html">RESEARCH</a>
+                <a class="active" href="researchList.html">RESEARCH</a>
             </li>
             <li><img src="./img/label.png" alt=""></li>
             <li class="flex">
