--- a/newsList.html
+++ b/newsList.html
@@ -39,7 +39,7 @@
             <li><img src="./img/label.png" alt=""></li>
             <li class="flex">
                 <a href="people.html">PEOPLE</a>
-                <a href="newsList.html">NEWS</a>
+                <a class="active" href="newsList.html">NEWS</a>
                 <div class="resource">
                     <span>RESOURCES</span>
                     <div class="list">
