--- a/people.html
+++ b/people.html
@@ -38,7 +38,7 @@
             </li>
             <li><img src="./img/label.png" alt=""></li>
             <li class="flex">
-                <a href="people.html">PEOPLE</a>
+                <a class="active" href="people.html">PEOPLE</a>
                 <a href="newsList.html">NEWS</a>
                 <div class="resource">
                     <span>RESOURCES</span>
