--- a/teaching.html
+++ b/teaching.html
@@ -43,7 +43,7 @@
                 <div class="resource">
                     <span>RESOURCES</span>
                     <div class="list">
-                        <a href="teaching.html">Teaching</a>
+                        <a class="active" href="teaching.html">Teaching</a>
                         <a href="energyConverter.html">Energy Converter</a>
                     </div>
                 </div>
