--- a/openings.html
+++ b/openings.html
@@ -52,7 +52,7 @@
     </menu>
     <div class="banner">
         <img src="img/pointer.png" />
-        <img src="img/banner.png" />
+        <video src="img/banner.mp4" autoplay loop></video>
     </div>
 
     <div class="openings main pd90 wrap_box">
