--- a/people.html
+++ b/people.html
@@ -51,8 +51,8 @@
         </ul>
     </menu>
     <div class="banner">
-        <img src="img/pointer.png" />
-        <img src="img/banner.png" />
+        <img src="img/pointer.png" />        
+        <video src="img/banner.mp4" autoplay loop></video>
     </div>
 
     <div class="people main">
