--- a/publications.html
+++ b/publications.html
@@ -52,7 +52,7 @@
     </menu>
     <div class="banner">
         <img src="img/pointer.png" class="pointer">
-        <img src="img/banner.png" />
+        <video src="img/banner.mp4" autoplay loop></video>
     </div>
 
     <div class="main">
