--- a/energyConverter.html
+++ b/energyConverter.html
@@ -153,7 +153,7 @@
     </menu>
     <div class="banner">
         <img src="img/pointer.png" />
-        <video src="img/banner.mp4" autoplay loop></video>
+        <video src="img/banner.mp4" autoplay muted loop></video>
     </div>
 
     <div class="energy_converter main wrap_box pd90">
