--- a/newsDetail.html
+++ b/newsDetail.html
@@ -52,7 +52,7 @@
     </menu>
     <div class="banner">
         <img src="img/pointer.png" />
-        <video src="img/banner.mp4" autoplay loop></video>
+        <video src="img/banner.mp4" autoplay muted loop></video>
     </div>
 
     <div class="main wrap_box">
