--- a/people.html
+++ b/people.html
@@ -52,7 +52,7 @@
     </menu>
     <div class="banner">
         <img src="img/pointer.png" />        
-        <video src="img/banner.mp4" autoplay muted loop></video>
+        <video src="img/banner.mp4" poster="img/banner.png" autoplay muted loop></video>
     </div>
 
     <div class="people main">
