--- a/newsDetail.html
+++ b/newsDetail.html
@@ -21,7 +21,7 @@
                 </a>
             </div>
             <div class="h-center">
-                <h2>Multidimentional nanospectroscopy laboratory </h2>
+                <h2>Multidimentional Nanospectroscopy Laboratory </h2>
             </div>
             <div class="h-right flex">
                 <img src="img/group.png" alt="">
