--- a/researchDetail.html
+++ b/researchDetail.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1" id="wixDesktopViewport" />
-    <title>You Lab</title>
+    <title>You Group</title>
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="css/style.css?t=4" />
     <link rel="stylesheet" type="text/css" href="css/iconfont.css?t=10" />
