--- a/people.html
+++ b/people.html
@@ -51,7 +51,7 @@
         </ul>
     </menu>
     <div class="banner">
-        <img src="img/pointer.png" />        
+        <img src="img/pointer.png" />
         <video src="img/banner.mp4" poster="img/banner.png" autoplay muted loop></video>
     </div>
 
@@ -67,7 +67,8 @@
                     <p class="email">Email: youxiao@westlake.edu.cn</p>
                 </div>
                 <img src="images/people/yx.png" alt="">
-                <div class="resonance">“Resonance, the utmost elegance. Like light, people too find beauty in resonance. Gathered at
+                <div class="resonance">“Resonance, the utmost elegance. Like light, people too find beauty in resonance.
+                    Gathered at
                     Westlake University,just as light resonates, we, the people, converge. Like the resonance of light,
                     hearts resonate among us.”</div>
                 <div class="biography">
@@ -84,8 +85,9 @@
                 </div>
                 <div class="hobbies">
                     <h6>Hobbies</h6>
-                    <p>Besides scientific research, You Xiao like to play badminton, rock climbing, hiking and other
-                        outdoor sports</p>
+                    <p>Beyond the lab, Xiao is a culinary maestro who relishes creating and discovering exquisite
+                        flavors. An avid traveler and sports enthusiast, she competes in badminton, loves cycling,
+                        backpacking, snowboarding, and indulges in various outdoor water sports.</p>
                 </div>
             </div>
         </div>
@@ -111,8 +113,8 @@
                                     <li><span>B.S. Northwest Normal University, 2010</span></li>
                                 </ul>
                             </div>
-                            <div>My main project is currently working on chiral biomolecular induced spin selective, I
-                                love watching movies, and reading books.</div>
+                            <div>Exploring Chiral Biomolecules and Spin Selectivity; Outside of my science adventures,
+                                I'm a big fan of movies and books.</div>
                         </div>
                     </li>
                     <li class="item flex">
@@ -150,8 +152,10 @@
                                     <p class="email">sohail@westlake.edu.cn</p>
                                 </div>
                                 <ul class="resumeList">
-                                    <li><span>Ph.D. Forman Christian College (A Chartered University) Lahore, Pakistan</span></li>
-                                    <li><span>M.Phil. Forman Christian College (A Chartered University) Lahore, Pakistan</span></li>
+                                    <li><span>Ph.D. Forman Christian College (A Chartered University) Lahore,
+                                            Pakistan</span></li>
+                                    <li><span>M.Phil. Forman Christian College (A Chartered University) Lahore,
+                                            Pakistan</span></li>
                                 </ul>
                             </div>
                             <div>My research Interests are Micellar solutions, Electrolytes, Drug delivery systems,
