--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <div class="content_r">
                         <img class="quotation_mark_l" src="images/home/quotation_mark_l.png" alt="">
                         <p>Resonance, the epitome of elegance. Just as light resonates, so do our hearts converge at
-                            Westlake University, where We find beauty in the resonance among people.</p>
+                            Westlake University, where we find beauty in the resonance among people.</p>
                         <img class="quotation_mark_r" src="images/home/quotation_mark_r.png" alt="">
                         <img class="image" src="images/home/img2.png" alt="">
                     </div>
