--- a/people.html
+++ b/people.html
@@ -149,7 +149,7 @@
                                 <div class="info">
                                     <p class="name">Muhammad Sohail</p>
                                     <p class="position">Postdoctoral Fellow</p>
-                                    <p class="email">sohail@westlake.edu.cn</p>
+                                    <p class="email">muhammadsohail@westlake.edu.cn</p>
                                 </div>
                                 <ul class="resumeList">
                                     <li><span>Ph.D. Forman Christian College (A Chartered University) Lahore,
@@ -170,9 +170,9 @@
                         <div class="item_r">
                             <div class="flex">
                                 <div class="info">
-                                    <p class="name">ZiMing Gao</p>
+                                    <p class="name">ZiMin Gao</p>
                                     <p class="position">Research Assistant</p>
-                                    <p class="email">gaoziming@westlake.edu.cn</p>
+                                    <p class="email">gaozimin@westlake.edu.cn</p>
                                 </div>
                                 <ul class="resumeList">
                                     <li><span>M.S.B. Yunnan University, 2023</span></li>
