--- a/people.html
+++ b/people.html
@@ -113,8 +113,8 @@
                                     <li><span>B.S. Northwest Normal University, 2010</span></li>
                                 </ul>
                             </div>
-                            <div>Exploring Chiral Biomolecules and Spin Selectivity; Outside of my science adventures,
-                                I'm a big fan of movies and books.</div>
+                            <div>Project Focus: Exploring Chiral Biomolecules and Spin Selectivity; Outside of my
+                                science adventures, I'm a big fan of movies and books.</div>
                         </div>
                     </li>
                     <li class="item flex">
