--- a/index.html
+++ b/index.html
@@ -8,22 +8,9 @@
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="css/style.css?t=4" />
     <link rel="stylesheet" type="text/css" href="css/iconfont.css?t=10" />
-    <link rel="stylesheet" type="text/css" href="css/swiper-bundle.min.css">
+    <link rel="stylesheet" href="css/swiper-3.4.2.min.css">
+    <script src="js/swiper-3.4.2.min.js"></script>
 </head>
-<script src="./js/swiper-bundle.min.js"></script>
-<script>
-    var mySwiper = new Swiper('.swiper-container', {
-        direction: 'vertical',
-        loop: true,
-
-        // 如果需要分页器
-        pagination: '.swiper-pagination',
-
-        // 如果需要前进后退按钮
-        nextButton: '.swiper-button-next',
-        prevButton: '.swiper-button-prev'
-    })        
-</script>
 
 <body>
     <header>
@@ -91,7 +78,7 @@
                     <div class="content_r">
                         <img class="quotation_mark_l" src="images/home/quotation_mark_l.png" alt="">
                         <p>Resonance, the epitome of elegance. Just as light resonates, so do our hearts converge at
-                            Westlake University, where we find beauty in the resonance among people.</p>
+                            Westlake University, where e find beauty in the resonance among people.</p>
                         <img class="quotation_mark_r" src="images/home/quotation_mark_r.png" alt="">
                         <img class="image" src="images/home/img2.png" alt="">
                     </div>
@@ -109,51 +96,53 @@
                             liquids.</p>
                         <a href="./researchList.html">Learn more</a>
                     </div>
-                    <div class="pagination">
-                        <img src="./img/left_jiantou.png" alt="">
-                        <span class="p_item">1</span>
-                        <span class="p_item">2</span>
-                        <span class="p_item">3</span>
-                        <span class="p_item">4</span>
-                        <span class="p_item">5</span>
-                        <img src="./img/right_jiantou.png" alt="">
-                    </div>
                 </div>
-                <div class="swiper-container research_r">
-                    <div class="swiper-wrapper">
-                        <div class="swiper-slide">
-                            <img src="images/research/img1.png" alt="">
-                            <p>Solvation Structure and molecular interactions at Lipid-Water Interfaces Studied Through
-                                Vibrational
-                                Spectroscopy</p>
+                <div class="research_r">
+                    <div class="swiper-container">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                                <div>
+                                    <img src="images/research/img1.png" alt="">
+                                </div>
+                                <p>Solvation Structure and molecular interactions at Lipid-Water Interfaces Studied
+                                    Through
+                                    Vibrational
+                                    Spectroscopy</p>
+                            </div>
+                            <div class="swiper-slide">
+                                <div>
+                                    <img src="images/research/img2.png" alt="">
+                                </div>
+                                <p>Solvation Structure and molecular interactions at Lipid-Water Interfaces Studied
+                                    Through
+                                    Vibrational
+                                    Spectroscopy</p>
+                            </div>
+                            <div class="swiper-slide">
+                                <div>
+                                    <img src="images/research/img3.png" alt="">
+                                </div>
+                                <p>Solvation Structure and molecular interactions at Lipid-Water Interfaces Studied
+                                    Through
+                                    Vibrational
+                                    Spectroscopy</p>
+                            </div>
                         </div>
-                        <div class="swiper-slide">
-                            <img src="images/research/img1.png" alt="">
-                            <p>Solvation Structure and molecular interactions at Lipid-Water Interfaces Studied Through
-                                Vibrational
-                                Spectroscopy</p>
+                        <!-- 如果需要分页器 -->
+                        <div class="swiper-pagination">
                         </div>
-                        <div class="swiper-slide">
-                            <img src="images/research/img1.png" alt="">
-                            <p>Solvation Structure and molecular interactions at Lipid-Water Interfaces Studied Through
-                                Vibrational
-                                Spectroscopy</p>
-                        </div>
-                    </div>
-                    <!-- 如果需要分页器 -->
-                    <div class="swiper-pagination"></div>
 
-                    <!-- 如果需要导航按钮 -->
-                    <div class="swiper-button-prev"></div>
-                    <div class="swiper-button-next"></div>
+                        <!-- 如果需要导航按钮 -->
+                        <div class="swiper-button-prev"></div>
+                        <div class="swiper-button-next"></div>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="contact_us pd90">
             <div class="wrap_box">
                 <h3 class="title">Join Us on Our Scientific Journey:</h3>
-                <p>Our research group is driven by a passion for discovery and a commitment to pushing the
-                    boundaries of
+                <p>Our research group is driven by a passion for discovery and a commitment to pushing the boundaries of
                     knowledge. We invite you to embark on a scientific voyage with us as we unravel the intricate
                     mysteries
                     of biomolecules and push the frontiers of Physical Chemistry and Biophysics.</p>
@@ -161,12 +150,10 @@
                     devoted to
                     nurturing the next generation of scientists, fostering innovation, and providing a supportive
                     research
-                    environment. For detailed information about these opportunities, please visit our 「Website
-                    Link].
+                    environment. For detailed information about these opportunities, please visit our 「Website Link].
                 </p>
                 <div class="modal">
-                    <p>If you have any inquiries or are interested in collaborating with us,don't hesitate to reach
-                        out:
+                    <p>If you have any inquiries or are interested in collaborating with us,don't hesitate to reach out:
                     </p>
                     <a href="./openings.html">Contact Us</a>
                 </div>
@@ -176,8 +163,7 @@
             <div class="wrap_box">
                 <h3 class="title">The news we publish will show you</h3>
                 <div class="instr flex">
-                    <p>Our lab team prides itself on excellence in the field of optics, and our academic
-                        achievements
+                    <p>Our lab team prides itself on excellence in the field of optics, and our academic achievements
                         represent our commitment to science and our pursuit of excellence.</p>
                     <a href="./newsList.html">Find more</a>
                 </div>
@@ -190,8 +176,7 @@
                                 </h6>
                                 <p>Organic Element Analyzer is mainly used for accurate determination of carbon,
                                     hydrogen,
-                                    nitrogen, sulfur, oxygen and other elements in organic compounds, which can meet
-                                    the
+                                    nitrogen, sulfur, oxygen and other elements in organic compounds, which can meet the
                                     testing
                                     requirements of various types of matrix samples and is widely usr …</p>
                             </div>
@@ -209,8 +194,7 @@
                                 </h6>
                                 <p>Organic Element Analyzer is mainly used for accurate determination of carbon,
                                     hydrogen,
-                                    nitrogen, sulfur, oxygen and other elements in organic compounds, which can meet
-                                    the
+                                    nitrogen, sulfur, oxygen and other elements in organic compounds, which can meet the
                                     testing
                                     requirements of various types of matrix samples and is widely usr …</p>
                             </div>
@@ -228,8 +212,7 @@
                                 </h6>
                                 <p>Organic Element Analyzer is mainly used for accurate determination of carbon,
                                     hydrogen,
-                                    nitrogen, sulfur, oxygen and other elements in organic compounds, which can meet
-                                    the
+                                    nitrogen, sulfur, oxygen and other elements in organic compounds, which can meet the
                                     testing
                                     requirements of various types of matrix samples and is widely usr …</p>
                             </div>
@@ -247,8 +230,7 @@
                                 </h6>
                                 <p>Organic Element Analyzer is mainly used for accurate determination of carbon,
                                     hydrogen,
-                                    nitrogen, sulfur, oxygen and other elements in organic compounds, which can meet
-                                    the
+                                    nitrogen, sulfur, oxygen and other elements in organic compounds, which can meet the
                                     testing
                                     requirements of various types of matrix samples and is widely usr …</p>
                             </div>
@@ -302,7 +284,17 @@
             </div>
         </div>
     </footer>
-
+    <script>
+        var mySwiper = new Swiper('.swiper-container', {
+            autoplay: 5000,//可选选项，自动滑动
+            loop: true,
+            pagination: '.swiper-pagination',
+            paginationClickable :true,
+            disableOnInteraction: false,
+            prevButton: '.swiper-button-prev',
+            nextButton: '.swiper-button-next'
+        })
+    </script>
 </body>
 
 </html>
