--- a/index.html
+++ b/index.html
@@ -131,10 +131,6 @@
                         <!-- 如果需要分页器 -->
                         <div class="swiper-pagination">
                         </div>
-
-                        <!-- 如果需要导航按钮 -->
-                        <div class="swiper-button-prev"></div>
-                        <div class="swiper-button-next"></div>
                     </div>
                 </div>
             </div>
@@ -290,9 +286,7 @@
             loop: true,
             pagination: '.swiper-pagination',
             paginationClickable :true,
-            disableOnInteraction: false,
-            prevButton: '.swiper-button-prev',
-            nextButton: '.swiper-button-next'
+            disableOnInteraction: false
         })
     </script>
 </body>
