--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="css/style.css?t=4" />
     <link rel="stylesheet" type="text/css" href="css/iconfont.css?t=10" />
-    <link rel="stylesheet" href="css/swiper-3.4.2.min.css">
-    <script src="js/swiper-3.4.2.min.js"></script>
+    <link rel="stylesheet" href="swiper/swiper-3.4.2.min.css">
+    <script src="swiper/swiper-3.4.2.min.js"></script>
 </head>
 
 <body>
