--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <div class="wrap_box flex">
             <div class="h-left flex">
                 <img id="logo" class="logo" src="img/logo.png" title="西湖大学" />
-                <a class="university" href="https://github.com/hugeRecycle/YouLab">
+                <a class="university" href="https://www.westlake.edu.cn/">
                 </a>
-                <a class="school" href="https://www.baidu.com/">
+                <a class="school" href="https://engineering.westlake.edu.cn/">
                 </a>
             </div>
             <div class="h-center">
